<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_id">com.kakaovx.homet.user</string>
    <string name="app_name">Kakao Home Training</string>
    <string name="notice_app_exit">Please click BACK again to exit</string>
    <string name="home_recommend_A">#recommned1</string>
    <string name="home_recommend_B">#recommned2</string>
    <string name="home_recommend_C">#recommend3</string>
    <string name="company">Kakao VX</string>
    <string name="page_home">Home</string>
    <string name="page_content">Content</string>
    <string name="page_planner">Planner</string>
    <string name="page_search">Search</string>
    <string name="page_profile">Profile</string>
    <string name="page_program">Program</string>
    <string name="page_free_workout">FreeWorkout</string>
    <string name="page_trainer">Trainer</string>
    <string name="page_list_empty">list is not exist in page.</string>
    <string name="card_name">Card Name</string>
    <string name="card_description">Card Description</string>
    <string name="landscape_list_title">Landspace List Title</string>
    <string name="landscape_list_sub_title">Landscape List Sub Title</string>
    <string name="home_free_workout">FreeWorkout</string>
    <string name="home_trainer">Trainer</string>
    <string name="home_program_recommend_comment">recommends this program.</string>
    <string name="finder">Find</string>
    <string name="home_free_workout_title">Free Workout Title</string>
    <string name="home_free_workout_description">Free Workout Description</string>
    <string name="home_program_title">Program Title</string>
    <string name="home_program_description">Program Description</string>
    <string name="home_trainer_title">Trainer Title</string>
    <string name="home_trainer_description">Trainer Description</string>
    <string name="home_trainer_job">Trainer Job</string>
    <string name="action_workout">Start Workout</string>
    <string name="exercise_id">exercise_id</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="difficulty">difficulty</string>
    <string name="calorie">calorie</string>
    <string name="play_time">play time</string>
    <string name="motion_count">motion count</string>
    <string name="program_count">program_count</string>
    <string name="confirm_status">confirm status</string>
    <string name="is_display">is display</string>
    <string name="read_count">read count</string>
    <string name="provider_id">provider id</string>
    <string name="thumbnail_url">thumbnail url</string>
    <string name="movie_url">movie url</string>
    <string name="add_time">add time</string>
    <string name="modify_time">modify time</string>
    <string name="body_parts">body parts</string>
    <string name="capture">Capture</string>
    <string name="video">video</string>
    <string name="free_motion_thumbnail_url">free motion movie thumbnail url</string>
    <string name="free_motion_movie_url">free motion movie url</string>
    <string name="free_motion_id">free motion id</string>
    <string name="page_diet_planner">Diet Planner</string>
    <string name="page_program_report">Program Report</string>
    <string name="page_diet_report">diet_report</string>
    <string name="page_search_filter">Search Filter</string>
    <string name="page_account">Account</string>
    <string name="page_payment">Payment</string>
    <string name="page_setting">Setting</string>

    <string name="popup_camera">Camera</string>
    <string name="popup_login">Login</string>
    <string name="popup_player">Player</string>

    <string name="error_client">"error_client</string>
    <string name="error_session">error_sessionr</string>
    <string name="error_server">error_server</string>
    <string name="error_network">error_network</string>
    <string name="error_need_permission">error_need_permission</string>

    <string name="title_share">title share</string>

    <!-- For Fcm -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="fcm_title">FCM Message</string>

    <!-- For Fdl -->
    <string name="fdl_domain">kakaovx.com</string>
    <string name="fdl_link">kakaovxtest.page.link</string>

    <!-- For kakao -->
    <string name="kakao_app_key">a8073223b58af3f8bf06db2be018964c</string>

    <!-- For SnsFaceBook -->
    <string name="facebook_app_id">231276660290973</string>
    <string name="fb_provider_authorities">com.facebook.app.FacebookContentProvider231276660290973</string>
    <string name="fb_login_protocol_scheme">fb231276660290973</string>

</resources>
